<resources>
    <string name="app_name">SmartTraffic</string>
    <string name="login_name">手机</string>
    <string name="login_pwd">密码</string>
    <string name="regis_check">验证码</string>
    <string name="check_btn">发送</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>


    <string name="hasAccount">I has a log account</string>
    <string name="forward_reg">No Account? Create now!</string>
    <string name="foregt_pass">Find Password</string>
    <string name="title_activity_first_launch_tool">FirstLaunchTool</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_settings">Settings</string>

    <string name="locating">定位中</string>
    <string name="search">搜索</string>
    <string name="notfound">抱歉，未找到！</string>
    <string name="key_word">请输入关键字</string>
    <string name="locatez_as">定位为</string>
    <string name="switch_ornot">，是否切换？</string>
    <string name="city_show_text_hot">热门城市</string>
    <string name="city_hotcity_curlocationcity_text">定位城市</string>
    <string name="third_title_close">关闭</string>
    <string name="city_hotcity_searchedittext_hint">请输入城市名,首字母或拼音</string>
    <string name="xml_loading_01">加载中</string>

    <string name="cancel">取消</string>
    <string name="city_name">城市列表</string>
    <string name="quit_dialog_cancel">取 消</string>
    <string name="assistant_upload_dialog_title">提示</string>
</resources>
