<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/deep_bg1"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_marginTop="100dp"
        android:layout_width="300dp"
        android:layout_height="400dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical">
            <!--手机号-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:textColorHint="@color/hint_text"
                >

                <EditText
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_name"
                    android:textColor="@color/colorControlActivated"

                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    />
                <!--密码-->
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_text"
                >

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pwd"
                    android:inputType="textPassword"
                    android:textColor="@color/colorControlActivated"

                    android:maxLines="1"
                    />
                <!--按钮及注册跳转-->
            </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


            <android.support.design.widget.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_text"
                android:layout_gravity="left"
                >

                <EditText
                    android:id="@+id/register_checkword"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/regis_check"
                    android:inputType="text"
                    android:textColor="@color/colorControlActivated"

                    android:maxLines="1"
                    />

                <!--验证码获取-->
            </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@color/login_bg"
        android:text="@string/check_btn"
        android:layout_gravity="bottom"
        android:layout_marginLeft="150dp"
     android:id="@+id/check_btn"
        android:textColor="#fff"
        android:textSize="15sp"
        android:enabled="true"
        android:clickable="true"
    />
</LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/login_bg"
                android:text="@string/register_btn"
                android:textColor="#fff"
                android:textSize="15sp"
                android:enabled="true"
                android:clickable="true">


            </android.support.v7.widget.AppCompatButton>

            <TextView android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/hasAccount"
                android:gravity="center"
                android:textSize="16sp"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>