<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/deep_bg1"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical">
            <!--手机号-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:textColorHint="@color/hint_text"

                >

                <EditText
                    android:id="@+id/login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_name"

                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textColor="@color/colorControlActivated"

                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                     />
                <!--密码-->
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_text"

                >

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/login_pwd"
                    android:inputType="textPassword"
                    android:textColor="@color/colorControlActivated"

                    android:maxLines="1"
                     />
                <!--按钮及注册跳转-->
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/login_bg"
                android:text="@string/login_btn"
                android:textColor="#fff"
                android:textSize="15sp"
                android:enabled="true"
                android:clickable="true">


            </android.support.v7.widget.AppCompatButton>

            <TextView android:id="@+id/link_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/forward_reg"
                android:gravity="center"
                android:textSize="16sp"/>
            <TextView android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/foregt_pass"
                android:gravity="center"

                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>